--- a/basic_regression.ipynb
+++ b/basic_regression.ipynb
@@ -25,8 +25,8 @@
     "\n",
     "import warnings\n",
     "\n",
-    "np.set_printoptions(precision=3, suppress=True)\n",
-    "warnings.filterwarnings(\"ignore\")\n",
+    "np.set_printoptions(precision=3, suppress=True) # no scientific notation and 3 decimal pts\n",
+    "warnings.filterwarnings(\"ignore\") # ignore warnings\n",
     "\n",
     "print(tf.__version__)"
    ]
@@ -964,7 +964,7 @@
     "horsepower_model.compile(\n",
     "    optimizer=tf.optimizers.Adam(learning_rate=0.1),\n",
     "    loss='mean_absolute_error'\n",
-    "    #metrics=[tf.keras.metrics.Accuracy()]\n",
+    "    # metrics=[tf.keras.metrics.Accuracy()]\n",
     ")"
    ]
   },
