--- a/tf_beg_quickstart.ipynb
+++ b/tf_beg_quickstart.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow version: 2.6.0\n"
+      "TensorFlow version: 2.7.0\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.06744027, 0.0536022 , 0.05078283, 0.11670015, 0.13474101,\n",
-       "        0.07511835, 0.08161858, 0.15270185, 0.06095554, 0.20633927]],\n",
+       "array([[0.05380765, 0.09167878, 0.16701175, 0.06801457, 0.1538028 ,\n",
+       "        0.11396313, 0.07750425, 0.0696799 , 0.16497341, 0.03956374]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,39 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-12-27 11:43:55.857076: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 2s 941us/step - loss: 0.2967 - accuracy: 0.9126\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.2913 - accuracy: 0.9147\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 2s 925us/step - loss: 0.1430 - accuracy: 0.9577\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1403 - accuracy: 0.9589\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 2s 950us/step - loss: 0.1097 - accuracy: 0.9667\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1066 - accuracy: 0.9677\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 2s 887us/step - loss: 0.0893 - accuracy: 0.9728\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0857 - accuracy: 0.9735\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0757 - accuracy: 0.9764\n"
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.0733 - accuracy: 0.9770\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fc502c76a90>"
+       "<keras.callbacks.History at 0x7fa69c251f50>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,26 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 0s 731us/step - loss: 0.0731 - accuracy: 0.9772\n"
+      "313/313 [==============================] - 0s 944us/step - loss: 0.0750 - accuracy: 0.9769\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(1, 10), dtype=float32, numpy=\n",
-       "array([[1.7080716e-08, 2.1538952e-07, 8.8657152e-06, 2.4071573e-04,\n",
-       "        3.7906167e-10, 6.7671991e-08, 1.8379211e-13, 9.9974734e-01,\n",
-       "        9.6266078e-08, 2.6042221e-06]], dtype=float32)>"
+       "array([[4.13414654e-08, 1.43459919e-08, 1.11738314e-06, 4.43729114e-05,\n",
+       "        2.74582093e-12, 1.40822065e-08, 4.68365784e-14, 9.99954343e-01,\n",
+       "        1.03048403e-09, 8.02697215e-08]], dtype=float32)>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
